2014-10-20  Glenn Morris  <rgm@gnu.org>

	* Version 24.4 released.

2014-10-15  Alan Mackenzie  <acm@muc.de>

	* cus-edit.el (custom-command-apply): Specify the return value in
	the doc string.
	(Custom-reset-standard): Save custom-file (e.g. .emacs) only when
	custom-command-apply has returned non-nil.

2014-10-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/lisp.el (lisp--local-variables-1): Handle `quote'.
	Backported (bug#18688).

2014-10-14  Eli Zaretskii  <eliz@gnu.org>

	* emacs-lisp/tabulated-list.el (tabulated-list-mode):
	Force bidi-paragraph-direction to 'left-to-right'.  This fixes
	buffer-menu display when the first buffer happens to start with
	R2L letter.

2014-10-13  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/authors.el (authors-aliases, authors-fixed-case)
	(authors-obsolete-files-regexps): Additions.
	(authors-no-scan-regexps): New constant.
	(authors-no-scan-file-p): New function.
	(authors): Respect authors-no-scan-file-p.

2014-10-12  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	Fix import completion.  (Bug#18582)
	* progmodes/python.el (python-shell-completion-get-completions):
	Fix import case regexp.

2014-10-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/bat-mode.el (bat-font-lock-keywords): Fix \\<_ typo
	(bug#18622).  Reported by Arni Magnusson <arnima@hafro.is>.
	* progmodes/prolog.el (prolog-electric--underscore): Same.

2014-10-09  Glenn Morris  <rgm@gnu.org>

	* frame.el (display-monitor-attributes-list): Doc tweaks.

2014-10-08  Eli Zaretskii  <eliz@gnu.org>

	* faces.el (display-grayscale-p): Mention in the doc string that
	the argument can be either a display name or a frame.

	* frame.el (display-pixel-height, display-pixel-width)
	(display-mm-height, display-mm-width, display-backing-store)
	(display-save-under, display-planes, display-color-cells)
	(display-visual-class, display-monitor-attributes-list)
	(display-screens): Mention in the doc string that the argument can